--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
 		</div>
 	</div>
 
-<div class="parent" style="margin-top: 10em;">
+<div class="parent" style="margin-top: 6em;">
   	<img src="img/pl_white.png" style="max-width: 100%;">
   	<div class="child">
   		<p align="center" style="font-size: 2vw; color: #fff;">More info coming soon.</p>
+  		<p align="center"><input style="font-size: 1.5vw;" type="button" class="shiny-btn" value="Check out our blog!" onclick="location.href='https://medium.com/@labsparadox';"></p>
   	</div>
 </div>
 
