Added the Contact Page
Added the contact page with some additional minor changes.

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 	<meta name="author" content="Paradox Labs" />
 
 	<!-- Title -->
-    <title>Paradox Labs | Home</title>
+    <title>Paradox Labs | Contact Us</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.ico">
@@ -35,7 +35,9 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 </head>
+	
 
+<body>
 <!-- *** START FB MESSENGER PLUGIN *** -->
 
 <!-- Load Facebook SDK for JavaScript -->
@@ -58,8 +60,7 @@
 </div>
 
 <!-- *** END FB MESSENGER PLUGIN *** -->
-	
-<body>
+
 	<div class="container">
 		<div class="main">
 			<nav class="menu-wrapper" id="menu-wrapper">
@@ -87,12 +88,44 @@
 		</div>
 	</div>
 
-<div class="parent" style="margin-top: 6em;">
-  	<img src="img/pl_white.png" style="max-width: 100%;">
+<div class="parent">
   	<div class="child">
-  		<p class="words" align="center">More info coming soon.</p>
-  		<p align="center"><a class="shiny-btn" href="https://medium.com/@labsparadox">Check out our blog!</a></p>
+  		<p class="words" id="topic" align="center" style="background-color: #252525; color: #FFF">Looking to get in touch?</p>
+  		<p class="words" align="center" style="margin-top: 1vw;">Our Social Media</p>
+  		<div class="quad">
+  			<a class="icon" href="https://www.facebook.com/LabsParadox"><i class="fab fa-facebook-square" style="background-color: #3B5998"></i></a>
+  		</div>
+  		<div class="quad">
+  			<a class="icon" href="https://twitter.com/LabsParadox?lang=en"><i class="fab fa-twitter" style="background-color: #1DA1F2"></i></a>
+  		</div>
+  		<div class="quad">
+  			<a class="icon" href="https://www.instagram.com/labsparadox/"><i class="fab fa-instagram"></i></a>
+  		</div>
+  		<div class="quad">
+  			<a class="icon" href="https://www.youtube.com/channel/UC8Xeke36V3-Bm0fvWeoc3Eg?"><i class="fab fa-youtube" style="background-color: #EE0F0F"></i></a>
+  		</div>
   	</div>
+
+  	<div class="break"></div>
+
+  	<div class="child" style="padding-top: 4vw;">
+  		<p class="words" id="our-work" align="center">Check out our work!</p>
+  		<div class="twins">
+  			<a class="icon" href="https://github.com/labsparadox"><i class="fab fa-github"></i></a>
+  		</div>
+  		<div class="twins">
+  			<a class="icon" href="https://medium.com/@labsparadox"><i class="fab fa-medium-m"></i></a>
+  		</div>
+  	</div>
+
+  	<div class="break"></div>
+
+
+  	<div class="child" style="padding-top: 6vw;">
+  		<p class="words" align="center">Our Contacts</p>
+  		<a href="mailto:PR@ParadoxLabs.co"><p class="info" align="center"><i class="fas fa-envelope" style="color: #FFF"></i> PR@ParadoxLabs.co</p></a>
+  		<a href="https://m.me/LabsParadox"><p class="info" align="center"><i class="fab fa-facebook-messenger" style="color: #FFF"></i> Message Us!</p></a>
+  	</div>	
 </div>
 
 <!-- Actual Scripts -->
