--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     </nav>
     <!-- END nav -->
 
-    <img src="img/DKVTX.svg" id="paradoxHero">
+    <!--<img src="img/DKVTX.svg" id="paradoxHero">-->
+    <img src="img/animation.gif" id="paradoxHero">
 
 <!-- HOMEPAGE GALLERY SECTION -->
     <!--<section class="home-slider js-fullheight owl-carousel bg-white">
