Update 2.4 - Added Public Beta Page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             <!--<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>-->
             <!--<li class="nav-item"><a href="team.html" class="nav-link">Team</a></li>-->
             <li class="nav-item"><a href="https://medium.com/@labsparadox" class="nav-link">Blog</a></li>
-              <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="test.html" class="nav-link">Public Beta</a></li>
+            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -744,6 +745,7 @@
               <ul class="list-unstyled">
                 <li><a href="index.html"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
                 <li><a href="https://medium.com/@labsparadox">Blog</a></li>
+                <li><a href="test.html">Public Beta</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
