--- a/test.html
+++ b/test.html
@@ -59,8 +59,8 @@
             <!--<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>-->
             <!--<li class="nav-item"><a href="team.html" class="nav-link">Team</a></li>-->
             <li class="nav-item"><a href="https://medium.com/@labsparadox" class="nav-link">Blog</a></li>
-            <li class="nav-item"><a href="test.html" class="nav-link">Public Beta</a></li>
-            <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
+            <li class="nav-item active"><a href="test.html" class="nav-link">Public Beta</a></li>
+            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -68,70 +68,24 @@
     <!-- END nav -->
     
 
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('img/contact.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('img/univrse.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center">
           <div class="col-md-9 ftco-animate text-center">
-            <h1 class="mb-2 bread">Contact Us</h1>
-            <p class="breadcrumbs"><span class="mr-2">For the questions that haven't been asked.</span></p>
+            <h1 class="mb-2 bread">Join Operation L.I.G.M.A.</h1>
+            <p class="breadcrumbs"><span class="mr-2">Let's Investigate & Get More Assistance</span></p>
           </div>
         </div>
       </div>
     </section>
-    <section class="ftco-section contact-section bg-light">
+    <section class="ftco-section text-center">
       <div class="container">
-        <div class="row d-flex mb-5 contact-info">
-          <div class="col-md-12 mb-4">
-            <h2 class="h4">Contact Information</h2>
-          </div>
-          <div class="w-100"></div>
-          <div class="col-md-3">
-            <p>Based in Bay Shore, NY</p>
-            <p>Check out our socials below!</p>
-          </div>
-          <div class="col-md-3">
-            <p></p>
-          </div>
-          <div class="col-md-3">
-            <p><span>Email:</span> <a href="mailto:Hello@ParadoxLabs.co">Hello@ParadoxLabs.co</a></p>
-          </div>
-          <div class="col-md-3">
-            <p><span>Phone:</span> <a href="#">Coming Soon</a></p>
-          </div>
-        </div>
+        <form action="https://docs.google.com/forms/d/e/1FAIpQLSeN9yOFOt1tDR2Q3B7gqYscfPw-sPoZnmJO4lKvtWVDb25dUg/viewform?usp=sf_link" method="get">
+          <input name="SubButton"  type="submit" class="form-control submit px-3" value="Sign Up!" id="testButt" style="max-width: 40%; margin-left: 30%; margin-right: 30%"></input>
+        </form>
       </div>
     </section>
-
-<!--CONTACT FORM-->
-		<!--<section class="ftco-section ftco-no-pt ftco-no-pb contact-section">
-			<div class="container-wrap">
-				<div class="row d-flex align-items-stretch no-gutters">
-					<div class="col-md-6 p-5 order-md-last">
-						<form action="#">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Name">
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Email">
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Subject">
-              </div>
-              <div class="form-group">
-                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
-              </div>
-              <div class="form-group">
-                <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
-              </div>
-            </form>
-					</div>
-					<div class="col-md-6 d-flex align-items-stretch">
-						<div id="map"></div>
-					</div>
-				</div>
-			</div>
-		</div>-->
     
 <!-- FOOTER SECTION -->
     <footer class="ftco-footer ftco-bg-dark ftco-section">
@@ -156,8 +110,8 @@
               <ul class="list-unstyled">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="https://medium.com/@labsparadox">Blog</a></li>
-                <li><a href="test.html">Public Beta</a></li>
-                <li><a href="contact.html"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
+                <li><a href="test.html"><span class="icon-long-arrow-right mr-2"></span>Public Beta</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
