Update 2.5 - Added Merch & Project Phoenix Page

--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Paradox Labs | Contact</title>
+    <title>Paradox Labs | Public Beta</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -54,12 +54,10 @@
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-            <!--<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>-->
-            <!--<li class="nav-item"><a href="project.html" class="nav-link">Project</a></li>-->
-            <!--<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>-->
-            <!--<li class="nav-item"><a href="team.html" class="nav-link">Team</a></li>-->
             <li class="nav-item"><a href="https://medium.com/@labsparadox" class="nav-link">Blog</a></li>
-            <li class="nav-item active"><a href="test.html" class="nav-link">Public Beta</a></li>
+            <!--<li class="nav-item"><a href="test.html" class="nav-link">Public Beta</a></li>-->
+            <li class="nav-item"><a href="merch.html" class="nav-link">Merch</a></li>
+            <li class="nav-item"><a href="https://phoenix.paradoxlabs.co" class="nav-link">Phoenix</a></li>
             <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
           </ul>
         </div>
@@ -110,7 +108,9 @@
               <ul class="list-unstyled">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="https://medium.com/@labsparadox">Blog</a></li>
-                <li><a href="test.html"><span class="icon-long-arrow-right mr-2"></span>Public Beta</a></li>
+                <!--<li><a href="test.html"><span class="icon-long-arrow-right mr-2"></span>Public Beta</a></li>-->
+                <li><a href="merch.html">Merch</a></li>
+                <li><a href="https:/phoenix.paradoxlabs.co">Phoenix</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
