Update 2.5.1 - Added Merch Pictures & Fixed Footer Links to Phoenix

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
                 <li><a href="https://medium.com/@labsparadox">Blog</a></li>
                 <!--<li><a href="test.html">Public Beta</a></li>-->
                 <li><a href="merch.html">Merch</a></li>
-                <li><a href="https:/phoenix.paradoxlabs.co">Phoenix</a></li>
+                <li><a href="https://phoenix.paradoxlabs.co">Phoenix</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
