--- a/contact.html
+++ b/contact.html
@@ -157,7 +157,7 @@
                 <li><a href="https://medium.com/@labsparadox">Blog</a></li>
                 <!--<li><a href="test.html">Public Beta</a></li>-->
                 <li><a href="merch.html">Merch</a></li>
-                <li><a href="https:/phoenix.paradoxlabs.co">Phoenix</a></li>
+                <li><a href="https://phoenix.paradoxlabs.co">Phoenix</a></li>
                 <li><a href="contact.html"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
               </ul>
             </div>
