--- a/merch.html
+++ b/merch.html
@@ -239,7 +239,7 @@
                 <li><a href="https://medium.com/@labsparadox">Blog</a></li>
                 <!--<li><a href="test.html">Public Beta</a></li>-->
                 <li><a href="contact.html"><span class="icon-long-arrow-right mr-2"></span>Merch</a></li>
-                <li><a href="https:/phoenix.paradoxlabs.co">Phoenix</a></li>
+                <li><a href="https://phoenix.paradoxlabs.co">Phoenix</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
