--- a/test.html
+++ b/test.html
@@ -110,7 +110,7 @@
                 <li><a href="https://medium.com/@labsparadox">Blog</a></li>
                 <!--<li><a href="test.html"><span class="icon-long-arrow-right mr-2"></span>Public Beta</a></li>-->
                 <li><a href="merch.html">Merch</a></li>
-                <li><a href="https:/phoenix.paradoxlabs.co">Phoenix</a></li>
+                <li><a href="https://phoenix.paradoxlabs.co">Phoenix</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
