Update 3.01 - Footer Layout Hotfix

--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
 <!-- FOOTER SECTION -->
 <footer class="foot">
 <div class="container">
-  <div class="row">
+  <div class="row row-cols-2">
 
 <!-- About Us and Socials-->
-  <div class="col-4">
+  <div class="col">
         <h2 class="title-foot">Paradox Labs</h2>
         <p><a href="https://www.google.com/search?q=define+paradox">par·a·dox</a> - a seemingly absurd statement that when investigated may prove to be true.</p>
         <!--<div class="row">
@@ -133,32 +133,32 @@
   </div>
 
   <!-- Footer Menu -->
-  <div class="col-2">
+  <div class="col">
     <h2 class="title-foot">Links</h2>
       <ul class="list-unstyled">
         <li><i class="fas fa-angle-right"></i></span> Home</li>
         <li><a href="https://medium.com/@labsparadox">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <!--<li><a href="contact.html">Contact</a></li>-->
       </ul>
   </div>
 
-  <!-- Email Form -->
-    <div class="col-6">
+  <!-- Email Form
+    <div class="col">
       <h2 class="title-foot">The Paradox Newsletter</h2>
       <p>I, Paradox Labs, solemnly swear to not blow up your inbox.</p>
       <p>I pwomise 🥺</p>
         <form name="s2gs" class="subscribe-form" id='Newsletter' onsubmit="changeValue();">
           <div class="form-group">
-            <input name="email" type="email" class="form-control mb-2 text-center email-form" placeholder="Enter Your Email..." required>
+            <input name="email" type="email" class="form-control mb-2 text-center email-form" placeholder="Email?" required>
             <input name="SubButton" type="submit" class="form-control submit px-3 email-submit" value="Subscribe!" id="testButt"></input>
           </div>
         </form>
-    </div>
+    </div> -->
   </div>
 </div>
 
 <!--Footer Text and Copyright-->
-<div class="inner">
+<div class="bot-text">
   <p>email <a href="mailto:hello@paradoxlabs.co">hello@paradoxlabs.co</a> for any business queries.</p>
   <p>contradict everything. even in <a href="https://www.youtube.com/watch?v=LhG8Ry-L3IQ">space</a>. &nbsp; &copy;<script>document.write( new Date().getFullYear() );</script></p> 
 </div>
