--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="The main hub for Paradox Labs services">
     <meta name="author" content="Paradox Labs">
 
-    <title>Vortex</title>
+    <title>Paradox Labs</title>
 
     <!-- Custom fonts -->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -38,9 +38,8 @@
           <div class="inner">
             <a href="/index.html"><img src="/img/vortex.svg" class="nav-icon"></a>
             <nav class="nav nav-masthead justify-content-center">
-              <!--<div id="funnyDisplay">.</div>
               <a class="nav-link" href="https://phoenix.paradoxlabs.co">Phoenix</a>
-              <a class="nav-link" href="https://bingo.paradoxlabs.co">Bingo</a>-->
+              <a class="nav-link" href="https://bingo.paradoxlabs.co">Bingo</a>
             </nav>
           </div>
         </header>
@@ -76,11 +75,10 @@
                     <h5 class="card-title">Bingo</h5>
                     <p class="card-text">Hand-crafted bingo boards with a personality. No downloads required.</p>
                     <p>🍎🍳👀</p>
-                    <button type="button" class="btn btn-secondary">Coming Soon</button>
+                    <a href="https://bingo.paradoxlabs.co" class="btn btn-primary">Work in Progress!</a>
                   </div>
                 </div>
               </div>
-
             </div>
           </div>
 
